# MyAndroidFFmpegDecoder

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/pengtg/myandroidffmpegdecoder/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/decoder/: accompany_decoder_controller.cpp  accompany_decoder_controller.h
app/src/main/cpp/decoder/libffmpeg_decoder/: accompany_decoder.cpp  accompany_decoder.h
app/src/main/java/com/pengtg/myandroidffmpegdecoder/: MainActivity.java  Mp3Decoder.java
app/src/main/jni/: Mp3Decoder.cpp  com_pengtg_myandroidffmpegdecoder_Mp3Decoder.h  native-lib.cpp
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/pengtg/myandroidffmpegdecoder/: ExampleUnitTest.java
